# ChatServer

./: .gitignore
MyChatProjectDemo/: ReadMe.md  架构图.md
MyChatProjectDemo/src/: auth_server.cpp  chat_server.cpp  client_app.cpp  db_server.cpp  gateway_server.cpp  log_server.cpp
chatsample/ChatClient/: chat_client  client.cpp
chatsample/ChatServer/: CMakeLists.txt  build.sh  main.cpp  start.sh
chatsample/ChatServer/src/: ChatServer.cpp  ChatServer.h
